--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,5 +1,5 @@
-baseURL = "https://caraway.my.id"
-title = "Berita Terkini Terbaru hari Ini"
+baseURL = "https://daunsukun.tech"
+title = "How to Style"
 theme = "zzo"
 
 defaultContentLanguage = "en"
