--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           hugo-version: "0.88.0"
 
       - name: Build Static HTML
-        run: hugo
+        run: hugo --disableKinds=taxonomy,taxonomyTerm,RSS
 
       - name: Install SSH Key
         uses: shimataro/ssh-key-action@v2
@@ -30,6 +30,6 @@ jobs:
         run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
       - name: Deploy ke server dengan rsync
-        run: rsync -avz ./public/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/carawaymyid/public_html/
+        run: rsync -avz ./public/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/daunsukuntech/public_html/
 
 
