--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,6 +1,6 @@
-logoText = "How to Style"
+logoText = "Get Mockups"
 logoType = "short" # long, short
-description = "Cute pictures, funny videos, and the best cat memes.."
+description = "Fully scalable graphics files that are absolutely free and legally available, fully layered, and easily customizable photorealistic PSD mockups are available for your projects, app showcases, and presentations."
 custom_css = []
 custom_js = []
 useFaviconGenerator = true # https://www.favicon-generator.org/
