--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -7,7 +7,7 @@
 
 [id]
   title = "Get Mockups
-  languageName = "Indonesian"
+  languageName = "Indonesia"
   weight = 2
   languagedir = "ltr"
   contentdir = "content/id"
