--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -6,8 +6,8 @@
   contentdir = "content/en"
 
 [id]
-  title = "Get Mockups
-  languageName = "English"
+  title = "Get Mockups"
+  languageName = "Indonesian"
   weight = 2
   languagedir = "ltr"
   contentdir = "content/id"
